--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,8 @@ default: &default
 development:
   <<: *default
   database: development
-
+  username: jrfdmkkdwfxtby
+  password: suuAZPLE9Le--IdL9dsVdzbAgy
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
